2006-05-26  Kevin Ryde  <user42@zip.com.au>

	* fports.c (fport_input_waiting): For ioctl, check HAVE_IOCTL as well
	as defined(FIONREAD), since mingw has FIONREAD but not ioctl().
	Reported by "The Senator".
	For select and ioctl, move fdes into those conditionals, to avoid
	unused variable warning when neither of those used.

2006-05-23  Kevin Ryde  <user42@zip.com.au>

	* fports.c: Remove "fwrite" declaration under "! HAVE_UNISTD_H".
	It's unused and will be in stdio.h anyway (if it's anywhere).

2006-05-20  Kevin Ryde  <user42@zip.com.au>

	* filesys.c (scm_stat2scm): Test #ifdef S_ISLNK directly, rather than
	HAVE_S_ISLNK from configure (it was only a #ifdef test anyway).

	* posix.c (scm_mknod): Test #ifdef S_IFLNK before using that (for
	symlink).  Probably can't create symlinks with mknod anyway though.

	* inline.h (scm_is_pair): Add a workaround for i386 gcc 2.95 bad code
	generation.

2006-05-15  Kevin Ryde  <user42@zip.com.au>

	* simpos.c, simpos.h (scm_primitive__exit): New function.
	(scm_primitive_exit): Update docstring, no longer the best exit after
	a fork.

2006-05-09  Kevin Ryde  <user42@zip.com.au>

	* numbers.c (scm_i_divide): For big/big wanting inexact, use mpq_get_d
	rather than converting to doubles, to avoid inf or nan when the inputs
	are too big for a double but the quotient does fit.  This affects
	conversions exact->inexact of big fractions.

	* filesys.c (scm_open_fdes): Use open64.
	(scm_init_filesys): Add O_LARGEFILE.

	* ports.c (scm_seek): Use lseek64.
	(scm_truncate_file): Use ftruncate64.

2006-05-08  Marius Vollmer  <mvo@zagadka.de>

	* private-gc.h (CELL_P): Also check that the potential pointer is
	correctly aligned for a cell.  Thanks to Miroslav Lichvar!

2006-04-18  Rob Browning  <rlb@defaultvalue.org>

	* _scm.h: Add back error if the size of off_t is unknown.  The bug
	was actually in guile-readline's configuration.

2006-04-18  Kevin Ryde  <user42@zip.com.au>
